[package]
name = "ferrisflow"
version = "0.1.0"
authors = ["suzu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.3", features = ["full"] }
async-trait = "0.1.42"
byteorder = "1.3.4"
anyhow = "1.0.34"
once_cell = "1.5.2"
derive_builder = "0.9.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4.19"
structopt = "0.3.21"
csv = "1.1.5"
field_types = "1.1.0"